[maven-release-plugin] rollback the release of v0.1.4

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
    <groupId>io.vyne</groupId>
    <artifactId>platform</artifactId>
    <packaging>pom</packaging>
-   <version>0.1.5-SNAPSHOT</version>
+   <version>0.1.4-SNAPSHOT</version>
    <modules>
       <!--<module>demos</module>-->
       <module>vyne-parent</module>
@@ -205,13 +205,6 @@
    </dependencyManagement>
 
    <build>
-      <extensions>
-         <extension>
-            <groupId>org.springframework.build</groupId>
-            <artifactId>aws-maven</artifactId>
-            <version>5.0.0.RELEASE</version>
-         </extension>
-      </extensions>
       <finalName>${project.artifactId}</finalName>
       <plugins>
          <plugin>
@@ -305,28 +298,13 @@
    </build>
 
    <distributionManagement>
-      <!--<repository>-->
-      <!--<id>vyne-releases</id>-->
-      <!--<url>https://nexus.vyne.io/repository/maven-releases/</url>-->
-      <!--</repository>-->
-      <!--<snapshotRepository>-->
-      <!--<id>vyne-snapshots</id>-->
-      <!--<url>https://nexus.vyne.io/repository/maven-snapshots/</url>-->
-      <!--</snapshotRepository>-->
-      <snapshotRepository>
-         <id>repo.vyne.co</id>
-         <url>s3://repo.vyne.co/snapshot</url>
-      </snapshotRepository>
       <repository>
-         <id>repo.vyne.co</id>
-         <url>s3://repo.vyne.co/release</url>
+         <id>vyne-releases</id>
+         <url>https://nexus.vyne.io/repository/maven-releases/</url>
       </repository>
+      <snapshotRepository>
+         <id>vyne-snapshots</id>
+         <url>https://nexus.vyne.io/repository/maven-snapshots/</url>
+      </snapshotRepository>
    </distributionManagement>
-
-   <!--<repositories>-->
-   <!--<repository>-->
-   <!--<id>repo.teamed.io</id>-->
-   <!--<url>s3://repo.teamed.io/release</url>-->
-   <!--</repository>-->
-   <!--</repositories>-->
 </project>
