--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
    <groupId>io.vyne</groupId>
    <artifactId>platform</artifactId>
    <packaging>pom</packaging>
-   <version>0.1.4-SNAPSHOT</version>
+   <version>0.1.4</version>
    <modules>
       <!--<module>demos</module>-->
       <module>vyne-parent</module>
@@ -29,7 +29,7 @@
 
    <scm>
       <developerConnection>scm:git:git@gitlab.com:vyne/vyne.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>v0.1.4</tag>
    </scm>
 
    <dependencies>
