add docker login to deploy jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ publish-snapshot:
   image: maven:3.3.9-jdk-8
   stage: build
   script:
+    - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
   # Tests are skipped.  See issue #41
     - 'mvn $MAVEN_CLI_OPTS  -DskipTests -Darguments=-DskipTests deploy'
   artifacts:
@@ -48,6 +49,7 @@ publish-release:
   image: maven:3.3.9-jdk-8
   stage: build
   script:
+    - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
     - 'mvn $MAVEN_CLI_OPTS release:prepare release:perform'
   artifacts:
     reports:
