fix application yml files not copied

--- a/vyne-parent/vyne-query-service/pom.xml
+++ b/vyne-parent/vyne-query-service/pom.xml
@@ -45,7 +45,7 @@
             <filtering>true</filtering>
             <directory>src/main/resources</directory>
             <includes>
-               <include>application.yml</include>
+               <include>application*.yml</include>
             </includes>
          </resource>
       </resources>
