skip tests in branch builds.  Relates to #41

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,8 @@ validate:
   image: maven:3.3.9-jdk-8
   stage: build
   script:
-    - 'mvn $MAVEN_CLI_OPTS install'
+    # Tests are skipped.  See issue #41
+    - 'mvn $MAVEN_CLI_OPTS -DskipTests -Darguments=-DskipTests install'
   artifacts:
     reports:
       junit:
