--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -29,8 +29,10 @@
     "@swimlane/ngx-graph": "^5.1.0",
     "angular2-moment": "^1.9.0",
     "core-js": "^2.5.4",
+    "http-status-codes": "^1.3.0",
     "mermaid": "^8.0.0-rc.8",
     "rxjs": "^6.0.0",
+    "url-parse": "^1.4.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
