--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -3,13 +3,13 @@
    <parent>
       <artifactId>platform</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.5-SNAPSHOT</version>
+      <version>0.1.5</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-parent</artifactId>
 
-   <version>0.1.5-SNAPSHOT</version>
+   <version>0.1.5</version>
    <packaging>pom</packaging>
 
    <properties>
