--- a/vyne-parent/schema-store-api/pom.xml
+++ b/vyne-parent/schema-store-api/pom.xml
@@ -3,12 +3,12 @@
    <parent>
       <groupId>io.vyne</groupId>
       <artifactId>vyne-parent</artifactId>
-      <version>0.1.5</version>
+      <version>0.1.6-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>schema-store-api</artifactId>
-   <version>0.1.5</version>
+   <version>0.1.6-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
@@ -28,7 +28,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.1.5</version>
+         <version>0.1.6-SNAPSHOT</version>
       </dependency>
    </dependencies>
 </project>
