--- a/vyne-parent/vyne-query-service/pom.xml
+++ b/vyne-parent/vyne-query-service/pom.xml
@@ -3,7 +3,7 @@
    <parent>
       <groupId>io.vyne</groupId>
       <artifactId>vyne-parent</artifactId>
-      <version>0.1.5</version>
+      <version>0.1.6-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
@@ -21,7 +21,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
-         <version>0.1.5</version>
+         <version>0.1.6-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
