--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -14,7 +14,7 @@
 
    <properties>
       <jackson.version>2.9.3</jackson.version>
-      <taxi.version>0.1.7</taxi.version>
+      <taxi.version>0.1.8-SNAPSHOT</taxi.version>
    </properties>
    <modules>
       <module>vyne</module>
