--- a/vyne-parent/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-parent/vyne-query-service/src/main/resources/application.yml
@@ -7,10 +7,12 @@ logging:
   level:
       org.springframework: WARN
       com.netflix.discovery.InstanceInfoReplicator: ERROR
-      com.netflix.discovery.DiscoveryClient: ERROR
-#       This is REALLY noisy - it logs errors on startup, complaining it can't connect .. generally those errors are ignorable
+
+#       These two netflix loggers are REALLY noisy - it logs errors on startup, complaining it can't connect .. generally those errors are ignorable
 #        But, in some cases we may care -- so consider turning this back on.
       com.netflix.discovery.shared.transport.decorator.RedirectingEurekaHttpClient: OFF
+      com.netflix.discovery.DiscoveryClient: OFF
+
       com.netflix: WARN
       com.hazelcast: WARN
       io.vyne: DEBUG
