--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -26,6 +26,7 @@
     "@covalent/core": "^2.0.0-beta.2",
     "@covalent/dynamic-forms": "^2.0.0-beta.2",
     "@covalent/highlight": "^1.0.1",
+    "@ng-select/ng-select": "^2.13.3",
     "@swimlane/ngx-graph": "^5.1.0",
     "angular2-moment": "^1.9.0",
     "core-js": "^2.5.4",
