--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -29,6 +29,7 @@
     "@ng-select/ng-select": "^2.13.3",
     "@swimlane/ngx-graph": "^5.1.0",
     "angular2-moment": "^1.9.0",
+    "class-transformer": "^0.2.0",
     "core-js": "^2.5.4",
     "http-status-codes": "^1.3.0",
     "mermaid": "^8.0.0-rc.8",
