--- a/vyne-parent/vyne-client-spring/pom.xml
+++ b/vyne-parent/vyne-client-spring/pom.xml
@@ -24,5 +24,10 @@
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-commons</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-core</artifactId>
+         <scope>provided</scope>
+      </dependency>
    </dependencies>
 </project>
