--- a/vyne-parent/vyne-query-service/pom.xml
+++ b/vyne-parent/vyne-query-service/pom.xml
@@ -14,6 +14,11 @@
    </properties>
    <dependencies>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-query-api</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>lang-to-taxi-api</artifactId>
          <version>${taxi.version}</version>
@@ -21,7 +26,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
-         <version>0.1.5-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
