--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -27,6 +27,7 @@
       <module>vyne-client</module>
       <module>vyne-query-api</module>
       <module>vyne-client-spring</module>
+      <module>vyne-test</module>
    </modules>
 
    <dependencies>
