--- a/vyne-parent/vyne-query-api/pom.xml
+++ b/vyne-parent/vyne-query-api/pom.xml
@@ -12,5 +12,17 @@
 
 
    <dependencies>
+      <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-core</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.module</groupId>
+         <artifactId>jackson-module-kotlin</artifactId>
+      </dependency>
    </dependencies>
 </project>
