--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -12,36 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/cdk": "^6.2.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/material": "^6.4.5",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@covalent/core": "^2.0.0-beta.2",
-    "@covalent/dynamic-forms": "^2.0.0-beta.2",
-    "@covalent/highlight": "^1.0.1",
+    "@angular/animations": "^7.2.10",
+    "@angular/cdk": "^7.3.5",
+    "@angular/common": "^7.2.10",
+    "@angular/compiler": "^7.2.10",
+    "@angular/core": "^7.2.10",
+    "@angular/forms": "^7.2.10",
+    "@angular/http": "^7.2.10",
+    "@angular/material": "^7.3.5",
+    "@angular/platform-browser": "^7.2.10",
+    "@angular/platform-browser-dynamic": "^7.2.10",
+    "@angular/router": "^7.2.10",
+    "@covalent/core": "^2.0.1",
+    "@covalent/dynamic-forms": "^2.0.1",
+    "@covalent/highlight": "^2.0.1",
     "@ng-select/ng-select": "^2.13.3",
     "@swimlane/ngx-graph": "^5.1.0",
-    "angular2-moment": "^1.9.0",
     "class-transformer": "^0.2.0",
     "core-js": "^2.5.4",
     "http-status-codes": "^1.3.0",
     "mermaid": "^8.0.0-rc.8",
-    "rxjs": "^6.0.0",
+    "moment": "^2.24.0",
+    "ngx-moment": "^3.4.0",
+    "rxjs": "^6.4.0",
+    "tslib": "^1.9.0",
     "url-parse": "^1.4.4",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.2",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "~7.3.6",
+    "@angular/compiler-cli": "^7.2.10",
+    "@angular/language-service": "^7.2.10",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -56,6 +58,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~3.2.4"
   }
 }
