--- a/vyne-parent/vyne-query-service/src/main/web/angular.json
+++ b/vyne-parent/vyne-query-service/src/main/web/angular.json
@@ -54,6 +54,23 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": true,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         },
@@ -65,6 +82,9 @@
           "configurations": {
             "production": {
               "browserTarget": "vyne-app:build:production"
+            },
+            "dev": {
+              "browserTarget": "vyne-app:build:dev"
             }
           }
         },
