--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -35,11 +35,18 @@
     "core-js": "^2.5.4",
     "highlight.js": "^9.17.1",
     "http-status-codes": "^1.3.0",
+    "immutable": "^3.8.2",
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
     "ngx-highlightjs": "^4.0.0",
     "ngx-moment": "^3.4.0",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "rich-markdown-editor": "^9.11.2",
     "rxjs": "^6.4.0",
+    "stream": "0.0.2",
     "tslib": "^1.9.0",
     "url-parse": "^1.4.4",
     "zone.js": "~0.8.29"
@@ -58,6 +65,9 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-select": "^3.0.10",
     "babel-loader": "^8.0.6",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
