--- a/vyne-parent/vyne-query-service/src/main/web/tsconfig.json
+++ b/vyne-parent/vyne-query-service/src/main/web/tsconfig.json
@@ -11,6 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "jsx": "react",
     "typeRoots": [
       "node_modules/@types"
     ],
