--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -15,8 +15,14 @@
    <properties>
       <jackson.version>2.9.3</jackson.version>
       <taxi.version>0.2.0-SNAPSHOT</taxi.version>
+
+      <!-- Used in QueryService -->
+      <elasticsearch.version>7.5.2</elasticsearch.version>
    </properties>
    <modules>
+      <module>events-api</module>
+      <module>search</module>
+      <module>utils</module>
       <module>vyne</module>
       <module>vyne-spring</module>
       <module>schema-store</module>
@@ -53,7 +59,7 @@
    </dependencyManagement>
    <repositories>
       <repository>
-         <id>central</id>
+         <id>jcenter</id>
          <name>bintray</name>
          <url>http://jcenter.bintray.com</url>
       </repository>
