--- a/vyne-parent/schema-store-client/pom.xml
+++ b/vyne-parent/schema-store-client/pom.xml
@@ -13,6 +13,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>events-api</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
          <groupId>org.funktionale</groupId>
          <artifactId>funktionale-all</artifactId>
          <version>1.2</version>
