--- a/vyne-parent/vyne-query-service/pom.xml
+++ b/vyne-parent/vyne-query-service/pom.xml
@@ -15,6 +15,12 @@
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>search</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>vyne-query-api</artifactId>
          <version>${project.version}</version>
       </dependency>
