* Add spring repository to schema-store-client project * Fix visibility type error in vyne-query-service * Update node version in vyne-query-service

--- a/vyne-parent/schema-store-client/pom.xml
+++ b/vyne-parent/schema-store-client/pom.xml
@@ -48,4 +48,15 @@
          <optional>true</optional>
       </dependency>
    </dependencies>
+
+   <repositories>
+      <repository>
+         <snapshots>
+            <enabled>false</enabled>
+         </snapshots>
+         <id>spring-releases</id>
+         <name>spring</name>
+         <url>https://repo.spring.io/plugins-release/</url>
+      </repository>
+   </repositories>
 </project>
