--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -77,7 +77,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "4.13.0",
+    "node-sass": "^4.13.1",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
