--- a/vyne-parent/vyne-query-api/pom.xml
+++ b/vyne-parent/vyne-query-api/pom.xml
@@ -13,6 +13,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>core-types</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
       </dependency>
