--- a/vyne-parent/schema-store-api/pom.xml
+++ b/vyne-parent/schema-store-api/pom.xml
@@ -21,6 +21,11 @@
          <artifactId>spring-webmvc</artifactId>
          <scope>provided</scope>
       </dependency>
+      <dependency>
+         <groupId>com.github.zafarkhaja</groupId>
+         <artifactId>java-semver</artifactId>
+         <version>0.9.0</version>
+      </dependency>
       <!--<dependency>-->
       <!--<groupId>org.springframework.cloud</groupId>-->
       <!--<artifactId>spring-cloud-netflix-core</artifactId>-->
