--- a/vyne-parent/schema-store-api/pom.xml
+++ b/vyne-parent/schema-store-api/pom.xml
@@ -22,9 +22,9 @@
          <scope>provided</scope>
       </dependency>
       <dependency>
-         <groupId>com.github.zafarkhaja</groupId>
-         <artifactId>java-semver</artifactId>
-         <version>0.9.0</version>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
       </dependency>
       <!--<dependency>-->
       <!--<groupId>org.springframework.cloud</groupId>-->
