--- a/vyne-parent/vyne-query-api/pom.xml
+++ b/vyne-parent/vyne-query-api/pom.xml
@@ -13,6 +13,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>core-types</artifactId>
          <version>${taxi.version}</version>
