--- a/vyne-parent/vyne/pom.xml
+++ b/vyne-parent/vyne/pom.xml
@@ -16,6 +16,13 @@
 
    <dependencies>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+
+
+      <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>taxi-jvm-common</artifactId>
          <version>${taxi.version}</version>
