--- a/vyne-parent/file-schema-server/pom.xml
+++ b/vyne-parent/file-schema-server/pom.xml
@@ -19,6 +19,11 @@
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
          <version>0.3.0-SNAPSHOT</version>
       </dependency>
