pausing to extract core types

--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -36,6 +36,7 @@
       <module>vyne-query-api</module>
       <module>vyne-client-spring</module>
       <module>file-schema-server</module>
+      <module>pipelines</module>
    </modules>
 
    <dependencies>
