--- a/vyne-parent/pipelines/pipelines-api/pom.xml
+++ b/vyne-parent/pipelines/pipelines-api/pom.xml
@@ -3,34 +3,28 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <artifactId>vyne-parent</artifactId>
+      <artifactId>pipelines</artifactId>
       <groupId>io.vyne</groupId>
       <version>0.3.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>vyne-core-types</artifactId>
-
+   <artifactId>pipelines-api</artifactId>
 
    <dependencies>
-      <dependency>
-         <groupId>com.fasterxml.jackson.core</groupId>
-         <artifactId>jackson-annotations</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>com.github.zafarkhaja</groupId>
-         <artifactId>java-semver</artifactId>
-         <version>0.9.0</version>
-      </dependency>
-      <dependency>
-         <groupId>io.vyne</groupId>
-         <artifactId>utils</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
-      </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>package-repository-api</artifactId>
          <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-core</artifactId>
       </dependency>
    </dependencies>
 </project>
