--- a/vyne-parent/vyne-core-types/pom.xml
+++ b/vyne-parent/vyne-core-types/pom.xml
@@ -27,5 +27,42 @@
          <artifactId>utils</artifactId>
          <version>0.3.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+         <groupId>org.apache.commons</groupId>
+         <artifactId>commons-csv</artifactId>
+         <version>1.4</version>
+      </dependency>
+      <!-- Adding this being lazy - we need access to the ConversionService
+      in TypedValue, that's the only reason.  Have added it in the weakest way
+      possible, but really, this is nuts, and having spring in the core-types
+      lib is insane. -->
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-core</artifactId>
+         <optional>true</optional>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>core-types</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>taxi-jvm-common</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>taxi-annotations</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.module</groupId>
+         <artifactId>jackson-module-kotlin</artifactId>
+      </dependency>
    </dependencies>
 </project>
