--- a/pom.xml
+++ b/pom.xml
@@ -149,10 +149,17 @@
 
    <dependencyManagement>
       <dependencies>
+<!--         <dependency>-->
+<!--            <groupId>io.projectreactor</groupId>-->
+<!--            <artifactId>reactor-core</artifactId>-->
+<!--            <version>3.0.7.RELEASE</version>-->
+<!--         </dependency>-->
          <dependency>
             <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-core</artifactId>
-            <version>3.0.7.RELEASE</version>
+            <artifactId>reactor-bom</artifactId>
+            <version>Dysprosium-SR6</version>
+            <type>pom</type>
+            <scope>import</scope>
          </dependency>
          <dependency>
             <groupId>org.springframework.cloud</groupId>
