--- a/vyne-parent/pipelines/pipeline-runner/pom.xml
+++ b/vyne-parent/pipelines/pipeline-runner/pom.xml
@@ -11,6 +11,10 @@
 
    <artifactId>pipeline-runner</artifactId>
 
+   <properties>
+      <kafka.version>2.0.1</kafka.version>
+   </properties>
+
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
@@ -43,5 +47,53 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/io.projectreactor.kafka/reactor-kafka -->
+      <dependency>
+         <groupId>io.projectreactor.kafka</groupId>
+         <artifactId>reactor-kafka</artifactId>
+         <version>1.2.2.RELEASE</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka-clients</artifactId>
+         <version>${kafka.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka_2.11</artifactId>
+         <version>${kafka.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka_2.11</artifactId>
+         <version>${kafka.version}</version>
+         <classifier>test</classifier>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka-clients</artifactId>
+         <version>${kafka.version}</version>
+         <classifier>test</classifier>
+         <scope>test</scope>
+      </dependency>
+<!--      <dependency>-->
+<!--         <groupId>org.springframework.kafka</groupId>-->
+<!--         <artifactId>spring-kafka-test</artifactId>-->
+<!--         <scope>test</scope>-->
+<!--         <version>2.2.12.RELEASE</version>-->
+<!--      </dependency>-->
+
    </dependencies>
+   <dependencyManagement>
+      <dependencies>
+         <!-- Reactor Kafka requires Kafka 2.0.0, overriding value set in the Boot BOM -->
+         <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.0.0</version>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
 </project>
