--- a/vyne-parent/pipelines/pipeline-runner/pom.xml
+++ b/vyne-parent/pipelines/pipeline-runner/pom.xml
@@ -11,14 +11,29 @@
 
    <artifactId>pipeline-runner</artifactId>
 
-   <properties>
-      <kafka.version>2.0.1</kafka.version>
-   </properties>
-
    <dependencies>
+      <dependency>
+         <groupId>com.fasterxml.jackson.module</groupId>
+         <artifactId>jackson-module-kotlin</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-openfeign</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      </dependency>
+
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>pipelines-api</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>pipelines-orchestrator-api</artifactId>
          <version>0.3.0-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -52,11 +67,6 @@
          <groupId>io.projectreactor.kafka</groupId>
          <artifactId>reactor-kafka</artifactId>
          <version>1.2.2.RELEASE</version>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.kafka</groupId>
-         <artifactId>kafka-clients</artifactId>
-         <version>${kafka.version}</version>
       </dependency>
       <dependency>
          <groupId>org.apache.kafka</groupId>
