--- a/vyne-parent/pipelines/pipelines-orchestrator-api/pom.xml
+++ b/vyne-parent/pipelines/pipelines-orchestrator-api/pom.xml
@@ -26,5 +26,10 @@
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-openfeign-core</artifactId>
       </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.datatype</groupId>
+         <artifactId>jackson-datatype-jsr310</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 </project>
