--- a/vyne-parent/pipelines/pipelines-orchestrator/pom.xml
+++ b/vyne-parent/pipelines/pipelines-orchestrator/pom.xml
@@ -14,6 +14,10 @@
 
    <dependencies>
       <dependency>
+         <groupId>com.fasterxml.jackson.module</groupId>
+         <artifactId>jackson-module-kotlin</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-openfeign</artifactId>
       </dependency>
