--- a/vyne-parent/vyne-query-service/src/main/web/package.json
+++ b/vyne-parent/vyne-query-service/src/main/web/package.json
@@ -38,12 +38,14 @@
     "immutable": "^3.8.2",
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
+    "monaco-languageclient": "^0.13.0",
     "ngx-highlightjs": "^4.0.0",
     "ngx-moment": "^3.4.0",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "reconnecting-websocket": "^4.4.0",
     "rich-markdown-editor": "^9.11.2",
     "rxjs": "^6.4.0",
     "stream": "0.0.2",
