--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.0.5.RELEASE</version>
+      <version>2.2.6.RELEASE</version>
    </parent>
 
    <properties>
@@ -22,8 +22,8 @@
       <kotlin.version>1.3.50</kotlin.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
-      <spring.cloud.version>Finchley.SR1</spring.cloud.version>
-      <spring.cloud.netflix.version>2.0.1.RELEASE</spring.cloud.netflix.version>
+      <spring.cloud.version>Hoxton.SR4</spring.cloud.version>
+      <spring.cloud.netflix.version>2.2.2.RELEASE</spring.cloud.netflix.version>
       <jackson.version>2.9.3</jackson.version>
    </properties>
 
@@ -81,8 +81,15 @@
       <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
+<!--         <version>2.28.2</version>-->
          <scope>test</scope>
       </dependency>
+<!--      <dependency>-->
+<!--         <groupId>net.bytebuddy</groupId>-->
+<!--         <artifactId>byte-buddy-dep</artifactId>-->
+<!--         <version>1.9.12</version>-->
+<!--         <scope>test</scope>-->
+<!--      </dependency>-->
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-test</artifactId>
@@ -317,6 +324,12 @@
    </distributionManagement>
 
    <repositories>
+      <repository>
+         <!-- for funktionale stuff -->
+         <id>bintray</id>
+         <name>bintray</name>
+         <url>http://jcenter.bintray.com</url>
+      </repository>
       <!-- for taxi snapshots -->
       <repository>
          <id>vyne-snapshots</id>
