--- a/vyne-parent/schema-store-client/pom.xml
+++ b/vyne-parent/schema-store-client/pom.xml
@@ -18,9 +18,9 @@
          <version>0.3.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>org.funktionale</groupId>
-         <artifactId>funktionale-all</artifactId>
-         <version>1.2</version>
+         <groupId>io.arrow-kt</groupId>
+         <artifactId>arrow-core</artifactId>
+         <version>${arrow.version}</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
