make file-schema-server runnable

--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -36,4 +36,20 @@
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       </dependency>
    </dependencies>
+   <build>
+      <finalName>${project.artifactId}</finalName>
+      <plugins>
+         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>build-info</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
+   </build>
 </project>
