--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
    </properties>
 
    <modules>
+      <module>cask</module>
       <module>vyne-core-types</module>
       <module>events-api</module>
       <module>vyne-search</module>
@@ -74,10 +75,6 @@
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
          <version>19.0</version>
-      </dependency>
-      <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-api</artifactId>
       </dependency>
       <dependency>
          <groupId>ch.qos.logback</groupId>
