--- a/pipelines/pom.xml
+++ b/pipelines/pom.xml
@@ -19,6 +19,7 @@
    <modules>
       <module>pipelines-api</module>
       <module>pipeline-runner</module>
+      <module>pipeline-runner-cacib-app</module>
       <module>pipelines-orchestrator-api</module>
       <module>pipelines-orchestrator</module>
    </modules>
