Added hooks for modifying the Kafka message before sending to the pipeline

--- a/pipelines/pipeline-runner/pom.xml
+++ b/pipelines/pipeline-runner/pom.xml
@@ -59,7 +59,10 @@
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
-
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
       <!-- https://mvnrepository.com/artifact/io.projectreactor.kafka/reactor-kafka -->
       <dependency>
          <groupId>io.projectreactor.kafka</groupId>
