--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -67,6 +67,7 @@
                      <build>
                         <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                         <tags>
+                           <!-- defined in profiles.  see root pom.xml -->
                            <tag>${docker.tag}</tag>
                         </tags>
                      </build>
