--- a/pipelines/pipelines-orchestrator/pom.xml
+++ b/pipelines/pipelines-orchestrator/pom.xml
@@ -56,6 +56,7 @@
                      <build>
                         <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                         <tags>
+                           <!-- defined in profiles.  see root pom.xml -->
                            <tag>${docker.tag}</tag>
                         </tags>
                      </build>
