Lens 4 ingest json message to cask

--- a/cask/src/main/resources/application-local.yml
+++ b/cask/src/main/resources/application-local.yml
@@ -1,3 +1,17 @@
+eureka:
+   uri: http://127.0.0.1:9022
+   client:
+      registryFetchIntervalSeconds: 1
+      initialInstanceInfoReplicationIntervalSeconds: 5
+      serviceUrl:
+         defaultZone: ${eureka.uri}/eureka/
+   instance:
+      leaseRenewalIntervalInSeconds: 2
+      leaseExpirationDurationInSeconds: 5
+
+vyne:
+   queryServiceUrl: http://query-service
+
 spring.datasource:
   url: "jdbc:postgresql://localhost:5432/vynedb"
   username: "vynedb"
