--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -12,10 +12,14 @@
    <artifactId>cask</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+       <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-webflux</artifactId>
+       </dependency>
+       <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+       </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -35,6 +39,16 @@
             <artifactId>vyne</artifactId>
             <version>${project.version}</version>
         </dependency>
+       <dependency>
+          <groupId>io.vyne</groupId>
+          <artifactId>vyne-spring</artifactId>
+          <version>${project.version}</version>
+       </dependency>
+       <dependency>
+          <groupId>io.vyne</groupId>
+          <artifactId>vyne-client-spring</artifactId>
+          <version>${project.version}</version>
+       </dependency>
 
         <dependency>
             <groupId>de.bytefish</groupId>
@@ -116,6 +130,7 @@
               <configuration>
                  <!-- TODO Uncomment once we have postgres running as part of local/ci builds -->
                  <excludes>
+                    <exclude>**/*IntegrationTest.*</exclude>
                     <exclude>**/IngesterTest.*</exclude>
                     <exclude>**/PostgresDdlGeneratorTest.*</exclude>
                  </excludes>
