--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "start-dev": "node/node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --configuration dev",
-    "build-prod": "node/node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --prod",
+    "start-dev": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --configuration dev",
+    "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
