Avro message deserialization support

--- a/pipelines/pipeline-runner-cacib-app/pom.xml
+++ b/pipelines/pipeline-runner-cacib-app/pom.xml
@@ -87,6 +87,7 @@
                   <configuration>
                      <sourceDirectory>${project.basedir}/src/main/resources/</sourceDirectory>
                      <outputDirectory>${project.build.directory}/generated-sources/cacib</outputDirectory>
+                     <stringType>String</stringType>
                   </configuration>
                </execution>
             </executions>
