LENS-43 Added cask response api

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
       <module>vyne-client-spring</module>
       <module>file-schema-server</module>
       <module>pipelines</module>
+       <module>cask-api</module>
    </modules>
 
    <scm>
