--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -36,6 +36,11 @@
         </dependency>
         <dependency>
             <groupId>io.vyne</groupId>
+            <artifactId>cask-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.vyne</groupId>
             <artifactId>vyne</artifactId>
             <version>${project.version}</version>
         </dependency>
