--- a/pipelines/pipeline-runner-app/pom.xml
+++ b/pipelines/pipeline-runner-app/pom.xml
@@ -15,7 +15,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>pipeline-runner-core</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
 
       <dependency>
@@ -27,7 +27,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>pipeline-runner-core</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
@@ -35,7 +35,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
