--- a/pipelines/pipelines-api/pom.xml
+++ b/pipelines/pipelines-api/pom.xml
@@ -26,7 +26,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-core-types</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>io.projectreactor</groupId>
