--- a/pipelines/pipelines-orchestrator-api/pom.xml
+++ b/pipelines/pipelines-orchestrator-api/pom.xml
@@ -20,7 +20,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>pipelines-api</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
